footer адаптивна верстка

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <button data-modal-open type="button" class="hero__button">Замовити послугу</button>
       </section>
       <!--Advantages-->
-      <!-- <section class="advantages section">
+      <section class="advantages section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="advantages-set">
@@ -148,33 +148,33 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Work-->
-      <!-- <section class="work">
+      <section class="work">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="work-set">
             <li class="work-item">
-              <img src="./images/box-1.jpg" alt="Людина друкує на клавіатурі" width="370" />
+              <img src="./images/box-1.jpg" alt="Людина друкує на клавіатурі" />
               <div class="work-content">
                 <p class="work-text">Десктопні додатки</p>
               </div>
             </li>
             <li class="work-item">
-              <img src="./images/box-2.jpg" alt="Людина працює з мобільним телефоном" width="370" />
+              <img src="./images/box-2.jpg" alt="Людина працює з мобільним телефоном" />
               <div class="work-content">
                 <p class="work-text">Мобільні додатки</p>
               </div>
             </li>
             <li class="work-item">
-              <img src="./images/box-3.jpg" alt="Людина працює на планшеті" width="370" />
+              <img src="./images/box-3.jpg" alt="Людина працює на планшеті" />
               <div class="work-content">
                 <p class="work-text">Дизайнерські рішення</p>
-              </div>
+              </div
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Team-->
       <!-- <section class="team section">
         <div class="container">
@@ -428,7 +428,7 @@
         </div>
       </section> -->
       <!-- Clients -->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="clients-list">
@@ -481,94 +481,97 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- Footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-content">
-          <div class="footer-main">
-            <a href="./index.html" class="logo">
-              Web<span class="logo_theme_dark">Studio</span></a
-            >
-            <address class="footer-address">
-              <ul>
-                <li class="footer-address__item">
-                  <a
-                    href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                    target="_blank"
-                    rel="noopener noreferrer nofollow"
-                    class="footer-address__link"
-                  >
-                    м. Київ, пр-т Лесі Українки, 26</a
-                  >
+          <div class="footer-tablet">
+            <div class="footer-main">
+              <a href="./index.html" class="logo">
+                Web<span class="logo_theme_dark">Studio</span></a
+              >
+              <address class="footer-address">
+                <ul>
+                  <li class="footer-address__item">
+                    <a
+                      href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      class="footer-address__link"
+                    >
+                      м. Київ, пр-т Лесі Українки, 26</a
+                    >
+                  </li>
+                  <li class="footer-address__item">
+                    <a href="mailto:info@devstudio.com" class="footer-address__link footer-address__link--active">info@devstudio.com</a>
+                  </li>
+                  <li class="footer-address__item">
+                    <a href="tel:+380961111111" class="footer-address__link footer-address__link--active">+38 096 111 11 11</a>
+                  </li>
+                </ul>
+              </address>
+            </div>
+            <div class="footer-networks">
+              <p class="footer-networks__title">Приєднуйтесь</p>
+              <ul class="footer-networks__list">
+                <li class="footer-networks__link">
+                  <a href="#" class="footer-networks__box">
+                    <svg
+                      lang="en"
+                      aria-label="instagram-icon"
+                      class="footer-networks__icon"
+                      width="20px"
+                      height="20px"
+                    >
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="footer-address__item">
-                  <a href="mailto:info@devstudio.com" class="footer-address__link footer-address__link--active">info@devstudio.com</a>
+                <li class="footer-networks__link">
+                  <a href="#" class="footer-networks__box">
+                    <svg
+                      lang="en"
+                      aria-label="twitter-icon"
+                      class="footer-networks__icon"
+                      width="20px"
+                      height="20px"
+                    >
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="footer-address__item">
-                  <a href="tel:+380961111111" class="footer-address__link footer-address__link--active">+38 096 111 11 11</a>
+                <li class="footer-networks__link">
+                  <a href="#" class="footer-networks__box">
+                    <svg
+                      lang="en"
+                      aria-label="facebook-icon"
+                      class="footer-networks__icon"
+                      width="20px"
+                      height="20px"
+                    >
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-networks__link">
+                  <a href="#" class="footer-networks__box">
+                    <svg
+                      lang="en"
+                      aria-label="linkedin-icon"
+                      class="footer-networks__icon"
+                      width="20px"
+                      height="20px"
+                    >
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
-            </address>
+            </div>
           </div>
-          <div class="footer-networks">
-            <p class="footer-networks__title">Приєднуйтесь</p>
-            <ul class="footer-networks__list">
-              <li class="footer-networks__link">
-                <a href="#" class="footer-networks__box">
-                  <svg
-                    lang="en"
-                    aria-label="instagram-icon"
-                    class="footer-networks__icon"
-                    width="20px"
-                    height="20px"
-                  >
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-networks__link">
-                <a href="#" class="footer-networks__box">
-                  <svg
-                    lang="en"
-                    aria-label="twitter-icon"
-                    class="footer-networks__icon"
-                    width="20px"
-                    height="20px"
-                  >
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-networks__link">
-                <a href="#" class="footer-networks__box">
-                  <svg
-                    lang="en"
-                    aria-label="facebook-icon"
-                    class="footer-networks__icon"
-                    width="20px"
-                    height="20px"
-                  >
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-networks__link">
-                <a href="#" class="footer-networks__box">
-                  <svg
-                    lang="en"
-                    aria-label="linkedin-icon"
-                    class="footer-networks__icon"
-                    width="20px"
-                    height="20px"
-                  >
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+          
           <div class="footer-mailing">
             <p class="footer-mailing__title">Підпишіться на розсилку</p>
             <form class="footer-mailing-form">
@@ -596,7 +599,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- Modal-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
