--- a/index.html
+++ b/index.html
@@ -935,8 +935,11 @@
             >
               <use class="form-own-checkbox-icon" href="./images/icons.svg#icon-check"></use>
             </svg>
-            <span class="form-check-label">Погоджуюся з розсилкою та приймаю&nbsp;</span>
-            <a class="form-check-label-text" href="">Умови договору</a></label
+            <span>
+              <span class="form-check-label">Погоджуюся з розсилкою та приймаю&nbsp;</span>
+            <a class="form-check-label-text" href="">Умови договору</a>
+            </span>
+            </label
           >
           <div class="contact-form-button">
             <button class="contact-form-button-submit" type="submit">Відправити</button>
